--- a/v4.html
+++ b/v4.html
@@ -1880,6 +1880,9 @@
                 detailOverlay.classList.remove('visible');
                 mainContent.forEach(el => el.style.display = '');
                 nav.style.display = '';
+
+                // Must remove scroll lock before scrollTo can work
+                document.body.classList.remove('no-scroll');
                 window.scrollTo(0, savedScrollY);
 
                 // Force layout
